--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
   </head>
   <body>
-  	<h1> hello git </h1>
+  	<h1> hello git i am glad to see you my Friend! </h1>
   </body>
   <script src="script.js"></script>
 </html>
